2005-07-11  Srinivasa Ragavan <sragavan@novell.com>
	
	* Makefile.am: Added e-attachment-bar.[ch] e-attachment.[ch]
	e-attachment.glade.
	* e-attachment.[ch]: Merge of em-attachment.[ch] and cal-attachment.[ch]
	* e-attachment-bar.[ch]: Merge of em-attachment-bar.[ch] and
	cal-attachment-bar.[ch].

2005-06-23  Kaushal Kumar  <kakumar@novell.com>

	* Makefile.am: Use 'misc' for widgetsincludedir, instead of 
	'widgets', to match source directory name and fix 
	evolution-exchange build.

2005-05-31  Li Yuan  <li.yuan@sun.com>

	* e-dateedit.c:(e_date_edit_update_date_entry):
	add relation to date_button.

	Fixes #302267

2005-05-16  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: move e-error.[ch] and e-system-errors.xml to
	e-util/. remove test-error.

2005-05-13  Rodney Dawes  <dobey@novell.com>

	* e-filter-bar.[ch]: Update for the new menu layout

2005-05-12  Shreyas Srinivasan	<sshreyas@novell.com>

	* e-send-options.c : Fixed #272005
	
2005-05-06  Sarfraaz Ahmed <asarfraaz@novell.com>

	* e-send-options.glade : Fixed a typo. #273095

2005-05-06  Harish Krishnaswamy  <kharish@novell.com>

	* e-send-options.glade: Fix for bugs #273096, #273097

2005-03-01  Jeffrey Stedfast  <fejj@novell.com>

	* e-search-bar.c (subitem_activated_cb): Make the entry widget
	grab focus. Fixes bug #60551.

2005-02-21  Rodney Dawes  <dobey@novell.com>

	* e-combo-button.c (paint): Fix the calculation of which shadow type
	to use to be more appropriate for the widget state and relief
	Always call gtk_box_paint and not only in special cases like GtkButton
	(e_combo_button_init): Change the arrow packing to pack_end

	Fixes #54503

2005-02-02  Li Yuan  <li.yuan@sun.com>

	* e-url-entry.c: (init):
	add a11y name to url link button.

2005-01-26  Rodney Dawes  <dobey@novell.com>

	* e-error.c (e_error_newv): Fix up spacing to be HIG compliant for
	the borders around the dialogs

2005-01-25  Not Zed  <NotZed@Ximian.com>

	* e-error.c: turn off debug output, people think its a significant